#5074 Image Picker empty icon wrong color Fixes #5074

--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -84,6 +84,9 @@
   height: calcSize(6);
   width: calcSize(6);
   margin: auto;
+  use {
+      fill: $foreground-light;
+    }
 }
 
 .sd-imagepicker__column {
